catweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webcat-deployment
  labels:
    app: webcat
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webcat
  template:
    metadata:
      labels:
        app: webcat
    spec:
      containers:
      - name: webcat
        image: jasatwal/catweb
        ports:
        - containerPort: 5000
