catweb-app.yaml
kind: Service
apiVersion: v1
metadata:
  name: catweb-service
spec:
  selector:
    app: catweb
  ports:
    - port: 5000
