expose-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webcat
  labels:
    app: webcat
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      nodePort: 32768
  selector:
    app: webcat
