catweb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"catweb-nginx-ingress","namespace":"se-jasatwal"},"spec":{"rules":[{"host":"catweb-nginx.jasatwal.kube.west.us.se.dckr.org","http":{"paths":[{"backend":{"serviceName":"catweb-nginx-service","servicePort":80}}]}}]}}
  creationTimestamp: null
  generation: 1
  name: catweb-nginx-ingress
  selfLink: /apis/extensions/v1beta1/namespaces/se-jasatwal/ingresses/catweb-nginx-ingress
spec:
  rules:
  - host: catweb-nginx.jasatwal.kube.west.us.se.dckr.org
    http:
      paths:
      - backend:
          serviceName: catweb-service
          servicePort: 5000
status:
  loadBalancer: {}
