kube-deployment.yaml

kind: Pod
apiVersion: v1
metadata:
  name: catweb-app
  labels:
    app: catweb
spec:
  containers:
    - name: catweb-app
      image: dtr.west.us.se.dckr.org/se-jasatwal/catweb

---

kind: Service
apiVersion: v1
metadata:
  name: catweb-service
spec:
  selector:
    app: catweb
  ports:
    - port: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: catweb-deployment
  labels:
    app: catweb-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: catweb
  template:
    metadata:
      labels:
        app: catweb
    spec:
      containers:
      - name: catweb-app
        image: dtr.west.us.se.dckr.org/se-jasatwal/catweb
        ports:
        - containerPort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{},"name":"catweb-nginx-ingress","namespace":"se-jasatwal"},"spec":{"rules":[{"host":"catweb-nginx.jasatwal.kube.west.us.se.dckr.org","http":{"paths":[{"backend":{"serviceName":"catweb-nginx-service","servicePort":80}}]}}]}}
  creationTimestamp: null
  generation: 1
  name: catweb-nginx-ingress
  selfLink: /apis/extensions/v1beta1/namespaces/se-jasatwal/ingresses/catweb-nginx-ingress
spec:
  rules:
  - host: catweb-nginx.jasatwal.kube.west.us.se.dckr.org
    http:
      paths:
      - backend:
          serviceName: catweb-service
          servicePort: 5000
status:
  loadBalancer: {}
